# tree-build

./: .gitignore  .pre-commit-config.yaml  LICENSE  License  README.markdown  README.md  appconfig.ini  dvc.yaml  params.yaml  pyproject.toml  ruff.toml  setup.cfg  setup.py  source_mapping_file.md
.cursor/plans/: dvc_pipeline_setup_872f50fc.plan.md
.dvc/: config
.github/workflows/: tests.yml
data/: .gitignore  README.markdown
data/EOL/: .gitignore
data/OZTreeBuild/AllLife/BespokeTree/: SupplementaryTaxonomy.tsv
data/OZTreeBuild/AllLife/BespokeTree/include_noAutoOTT/: AfrotheriaPoulakakis2010.phy  Ancyromonadida.phy  Animals.PHY  Base.PHY  Batoids_Aschliman2012.PHY  BicherSuzuki2010.phy  BoreoeutheriaOneZoom_altered.phy  Crocodylia_OneZoom.phy  CtenophoresWhelan2017.PHY  Deepfin2.phy  GalapagosFinchesLamichhaney2015.phy  GarsDeepfin.phy  Holomycota.PHY  Lampreys_Potter2015.phy  Marsupial_recalibrated.phy  Naylor2012Selachimorpha.PHY  Neognathae_minus_passerines_OneZoom.PHY  PalaeognathaeMitchell2014.PHY  PasserinesOneZoom.phy  PrimatesOneZoom.phy  PrimatesSpringer2012_AT.PHY  Protostomes.PHY  Testudines_OneZoom.phy  Tetrapods_Zheng_base.PHY  Tinamous_OneZoom.phy
data/OZTreeBuild/AllLife/OpenTreeParts/: .gitignore
data/OZTreeBuild/AllLife/OpenTreeParts/OT_required/: README.markdown
data/OZTreeBuild/Amniota/: vernacular_by_ott.csv
data/OZTreeBuild/ExtinctSpecies/: Dinosauria.wikiclades
data/OZTreeBuild/WikiExtraction/: Amniota.wikiclades  Dinosauria.wikiclades  Reptiliomorpha.wikiclades  Synapsida.wikiclades
data/OpenTree/: .gitignore  README.markdown
data/Wiki/: README.markdown
data/Wiki/wp_SQL/: .gitignore
data/filtered/: .gitignore
oz_tree_build/: README.markdown  _OZglobals.py  build_oz_tree.py  get_open_trees_from_one_zoom.py  oz_tokens.py  token_to_oz_tree_file_mapping.py
oz_tree_build/images_and_vernaculars/: get_wiki_images.py  image_cropping.py  process_image_bits.py
oz_tree_build/newick/: check_ultrametricity.py  extract_minimal_tree.py  extract_trees.py  fix_ultrametricity.py  format_newick.py  newick_parser.py
oz_tree_build/taxon_mapping_and_popularity/: CSV_base_table_creator.py  OTT_popularity_mapping.py  dendropy_extras.py
oz_tree_build/tree_build/: build.py  build_oz_tree.py  get_open_trees_from_one_zoom.py  oz_tokens.py  token_to_oz_tree_file_mapping.py  tree_dating.py
oz_tree_build/tree_build/ott_mapping/: add_ott_numbers_to_trees.py
oz_tree_build/utilities/: apply_mask_to_object_graph.py  db_helper.py  debug_util.py  download_and_filter_pageviews.py  download_and_filter_wikidata.py  download_opentree.py  file_utils.py  filter_common.py  filter_eol.py  filter_pageviews.py  filter_wikidata.py  filter_wikipedia_sql.py  find_in_file.py  generate_bespoke_doi_html.py  generate_filtered_files.py  generate_test_files.py  make_js_treefiles.py  temp_helpers.py  trim_wikipedia.py
oz_tree_build/wiki_extraction/: README.markdown  add_dates_and_species_to_tree.py  extinct_tree.markdown  mwparserfromhell_helpers.py  newick_combiner.py  period_date_ranges.py  wiki_clade_extractor.py  wiki_clade_node.py  wiki_extractor.py  wiki_taxon_page_data.py  wiki_taxonomy_node.py
tests/: conftest.py  db_test_helpers.py  felidae_helpers.py  pytest.ini  test_apply_mask_to_object_graph.py  test_extract_minimal_tree.py  test_extract_trees.py  test_find_in_file.py  test_format_newick.py  test_full_clade_filtering.py  test_full_generation.py  test_get_wiki_images.py  test_make_js_treefiles.py  test_newick_parser.py  test_process_image_bits.py  test_tree_build_build_ages_from_dist.py  test_tree_build_build_apply_node_ages.py  test_tree_build_build_expand_nodes.py  test_tree_build_build_filter_tree.py  test_ultrametric.py  test_ultrametric_check.py
tests/test_files_felidae/expected_output_files/: ordered_dates_0.js  ordered_leaves_0.csv  ordered_nodes_0.csv  ordered_tree_0.nwk  ordered_tree_0.poly
tests/test_files_felidae/expected_output_files_filtering/: Leopardus_Felidae_AllLife_full_tree.phy  Leopardus_Felidae_enwiki-latest-page.sql  Leopardus_Felidae_latest-all.json  Leopardus_Felidae_pagecounts-2020-04-views-ge-5-totals  Leopardus_Felidae_pagecounts-2020-05-views-ge-5-totals  Leopardus_Felidae_pagecounts-2020-06-views-ge-5-totals  Leopardus_Felidae_pagecounts-2020-07-views-ge-5-totals  Leopardus_Felidae_pagecounts-2020-08-views-ge-5-totals  Leopardus_Felidae_pageviews-202401-user  Leopardus_Felidae_pageviews-202402-user  Leopardus_Felidae_pageviews-202403-user  Leopardus_Felidae_provider_ids.csv  Leopardus_Felidae_taxonomy.tsv
tests/test_files_felidae/expected_output_files_generation/: ordered_dates_0.js  ordered_leaves_0.csv  ordered_leaves_0.csv.mySQL  ordered_nodes_0.csv  ordered_nodes_0.csv.mySQL
tests/test_files_felidae/input_files/: Felidae_AllLife_full_tree.phy  Felidae_enwiki-latest-page.sql  Felidae_latest-all.json  Felidae_pagecounts-2020-04-views-ge-5-totals  Felidae_pagecounts-2020-05-views-ge-5-totals  Felidae_pagecounts-2020-06-views-ge-5-totals  Felidae_pagecounts-2020-07-views-ge-5-totals  Felidae_pagecounts-2020-08-views-ge-5-totals  Felidae_pageviews-202401-user  Felidae_pageviews-202402-user  Felidae_pageviews-202403-user  Felidae_provider_ids.csv  Felidae_taxonomy.tsv
