[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oz_tree_build"
version = "0.0.2"
authors = [
    {name = "OneZoom Developers", email = "mail@onezoom.org"},
]
description = "Logic to build the OneZoom tree"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
    "pytest>=8.1",
    "DendroPy>=4.5.0",
    "pymysql==1.1.0",
    "azure-ai-vision-imageanalysis==1.0.0b2",
    "pillow==10.3.0",
    "pydal>=20240601.1",
    "cryptography>=42.0",
    "mwparserfromhell>=0.6.6",
    "requests-cache>=1.2.1",
    "dvc[s3]>=3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.1",
    "ruff>=0.5.1",
]

[tool.pytest.ini_options]
markers = [
    "skip_real_apis: Mark test to be skipped if real APIs are not available",
]

[project.scripts]
add_ott_numbers_to_trees = "oz_tree_build.tree_build.ott_mapping.add_ott_numbers_to_trees:main"
build_oz_tree = "oz_tree_build.tree_build.build_oz_tree:main"
get_open_trees_from_one_zoom = "oz_tree_build.tree_build.get_open_trees_from_one_zoom:main"
generate_filtered_files = "oz_tree_build.utilities.generate_filtered_files:main"
filter_eol = "oz_tree_build.utilities.filter_eol:main"
filter_wikidata = "oz_tree_build.utilities.filter_wikidata:main"
extract_wikidata_titles = "oz_tree_build.utilities.filter_wikidata:extract_titles_main"
filter_wikipedia_sql = "oz_tree_build.utilities.filter_wikipedia_sql:main"
filter_pageviews = "oz_tree_build.utilities.filter_pageviews:main"
download_and_filter_pageviews = "oz_tree_build.utilities.download_and_filter_pageviews:main"
download_and_filter_wikidata = "oz_tree_build.utilities.download_and_filter_wikidata:main"
discover_latest_wikidata_dump_url = "oz_tree_build.utilities.download_and_filter_wikidata:discover_main"
download_opentree = "oz_tree_build.utilities.download_opentree:main"
CSV_base_table_creator = "oz_tree_build.taxon_mapping_and_popularity.CSV_base_table_creator:main"
get_wiki_images = "oz_tree_build.images_and_vernaculars.get_wiki_images:main"
process_image_bits = "oz_tree_build.images_and_vernaculars.process_image_bits:main"
make_js_treefiles = "oz_tree_build.utilities.make_js_treefiles:main"
format_newick = "oz_tree_build.newick.format_newick:main"
extract_minimal_tree = "oz_tree_build.newick.extract_minimal_tree:main"
extract_trees = "oz_tree_build.newick.extract_trees:main"
check_ultrametricity = "oz_tree_build.newick.check_ultrametricity:main"
fix_ultrametricity = "oz_tree_build.newick.fix_ultrametricity:main"
find_in_file = "oz_tree_build.utilities.find_in_file:main"
wiki_clade_extractor = "oz_tree_build.wiki_extraction.wiki_clade_extractor:main"
newick_combiner = "oz_tree_build.wiki_extraction.newick_combiner:main"
add_dates_and_species_to_tree = "oz_tree_build.wiki_extraction.add_dates_and_species_to_tree:main"

[tool.setuptools]
packages = ["oz_tree_build"]
include-package-data = true

[tool.pytest]
testpaths = ["tests"]