[metadata]
name = oz_tree_build
author = OneZoom Developers
author_email = mail@onezoom.org
license = MIT
description= Logic to build the OneZoom tree.

[options]
packages = oz_tree_build
python_requires = >=3.7
include_package_data = True
# install_requires =
#     jsonschema>=3.0.0
#     svgwrite>=1.1.10
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    build_oz_tree = oz_tree_build.build_oz_tree:main
    get_open_trees_from_one_zoom = oz_tree_build.get_open_trees_from_one_zoom:main
    format_newick = oz_tree_build.newick.format_newick:main
    extract_minimal_tree = oz_tree_build.newick.extract_minimal_tree:main
    extract_trees = oz_tree_build.newick.extract_trees:main
    find_in_file = oz_tree_build.utilities.find_in_file:main

[tool:pytest]
testpaths =
    tests
