[metadata]
name = oz_tree_build
author = OneZoom Developers
author_email = mail@onezoom.org
license = MIT
description= Logic to build the OneZoom tree.

[options]
packages = oz_tree_build
python_requires = >=3.7
include_package_data = True
install_requires =
    DendroPy>=4.5.0

    # TODO: remove these once we move away from multiprocessing
    indexed-bzip2>=1.4 
    filehash>=0.2.dev1
    multiprocessing_logging>=0.3.3
    pytest>=7.2
setup_requires =
    setuptools

[options.entry_points]
console_scripts =
    # Scripts to build the tree
    add_ott_numbers_to_trees = oz_tree_build.tree_build.ott_mapping.add_ott_numbers_to_trees:main
    build_oz_tree = oz_tree_build.tree_build.build_oz_tree:main
    get_open_trees_from_one_zoom = oz_tree_build.tree_build.get_open_trees_from_one_zoom:main

    # Scripts to create the base tree and table data
    generate_filtered_files = oz_tree_build.utilities.generate_filtered_files:main
    CSV_base_table_creator = oz_tree_build.taxon_mapping_and_popularity.CSV_base_table_creator:main

    # Miscellaneous utilities
    format_newick = oz_tree_build.newick.format_newick:main
    extract_minimal_tree = oz_tree_build.newick.extract_minimal_tree:main
    extract_trees = oz_tree_build.newick.extract_trees:main
    find_in_file = oz_tree_build.utilities.find_in_file:main

[tool:pytest]
testpaths =
    tests
